<resources>
    <string name="app_name">Quizzes</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? Signup</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="please_login_to_continue_using_app">Please login to Continue using app</string>
    <string name="login_now">Login Now</string>
    <string name="isn_t_life_a_collection_of_weird_quizzes_with_n_no_answer_to_half_the_questions">Isn\'t life a collection of weird quizzes with \n no answer to half the questions ?</string>
    <string name="welcome_to_quiz_app">Welcome To Quiz App</string>
    <string name="button">Button</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="stay_connected">Stay Connected</string>
    <string name="enter_your_email_address_and_password_n_to_get_access_to_yur_account">Enter your email address and password /n to get access to yur account</string>
    <string name="email2">Email</string>
    <string name="password2">Password</string>
    <string name="password3">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="todo4">TODO</string>
</resources>